--- a/index.html
+++ b/index.html
@@ -1,27 +1,115 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="main.css">
     <script src="jquery.js"></script>
-    <script src="data_generator.js"></script>
+    <script src="data_generator.js"></script> 
   </head>
   <body>
-    <script>
+  <img src="images/background.png" >
 
-      $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
+    <header>
+      <nav class="nav">
+        <a class="home" href= "index.html"><img src="images/home.png" /></a>
+      </nav>  
+    </header>
 
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
-        }
+    <aside>
+      <section class="user-info">
+        <h3><strong>Twittler</strong></h3>
+        <!-- jQuery should input user profile when user is clicked-->
+        <img class="profile-pic default" src="images/error_icon.png" height="200" width="200" />
+        <h4 class="username">@user</h4>
+      </section>
+    </aside>
 
-      });
+    <section class="tweets-primary">
+    	<div class="new-tweets">
+        <span>View new Tweets</span>
+      	</div>
+      	<div class="tweets">
+	        <script>
+		        $(document).ready(function(){
+		        	var $body = $('.tweets');
+		            $body.html('');
+		            function loadTweets () {
+		              var timeStamp = getTime();
+		              var index = streams.home.length - 1;
+		              while(index >= 0){
+			              var tweet = streams.home[index];
+			              var $tweet = $('<div></div>');
+			              $tweet.text('@' + tweet.user + ': ' + tweet.message + " " + timeStamp);
+			              $tweet.addClass(tweet.user).prependTo($body);
+			              index -= 1;
+		              }
+		            }
+		            loadTweets();
+		            $(".new-tweets").on("click", function (){
+		            	loadTweets();
+		            });
 
-    </script>
+		            /********** replace profile-pic withtweet.user class img **********/
+					$(".tweets").on("click", "div",  function () {
+						if ($(this).hasClass("shawndrost")) {
+							$("<img class='profile-pic' src='images/shawndrost.jpg' height='200' width='200' />" ).replaceAll(".profile-pic");
+							$("<h4 class='username'>@shawndrost</h4>").replaceAll(".username");
+						}
+						else if ($(this).hasClass("sharksforcheap")) {
+							$("<img class='profile-pic' src='images/sharksforcheap.jpeg' height='200' width='200' />" ).replaceAll(".profile-pic");
+							$("<h4 class='username'>@sharksforcheap</h4>").replaceAll(".username");
+						}
+						else if ($(this).hasClass("mracus")) {
+							$("<img class='profile-pic' src='images/marcus.jpg' height='200' width='200' />" ).replaceAll(".profile-pic");
+							$("<h4 class='username'>@mracus</h4>").replaceAll(".username");
+						}
+						else if ($(this).hasClass("douglascalhoun")) {
+							$("<img class='profile-pic' src='images/douglas.jpg' height='200' width='200' />" ).replaceAll(".profile-pic");
+							$("<h4 class='username'>@douglascalhoun</h4>").replaceAll(".username");
+						}
+					});
+
+					/********** function to only disply user's timeline when their tweet is clicked **********/
+					var homeButton = function () {
+						$(".new-tweets").hide();
+					}
+					$(".tweets").on("click", ".shawndrost",  function () {
+						var hidden = $(".tweets").children().not(".shawndrost");
+						$(hidden).hide("fast");
+						homeButton();
+					});
+					$(".tweets").on("click", ".sharksforcheap",  function () {
+						var hidden = $(".tweets").children().not(".sharksforcheap");
+						$(hidden).hide("fast");
+						homeButton();
+					});
+					$(".tweets").on("click", ".mracus",  function () {
+						var hidden = $(".tweets").children().not(".mracus");
+						$(hidden).hide("fast");
+						homeButton();
+					});
+					$(".tweets").on("click", ".douglascalhoun",  function () {
+						var hidden = $(".tweets").children().not(".douglascalhoun");
+						$(hidden).hide("fast");
+						homeButton();
+					});
+					/*********** funtion to put time stamp on each tweet **********/
+					function getTime () {
+						var d = new Date();
+						var h = d.getHours();
+						var m = d.getMinutes();
+						var meridiem = "am"
+						if (h > 12) {
+							h = h - 12;
+							meridiem = "pm"
+						}
+						if (m < 10) {
+							m ="0" + m;
+						}
+						return h + ":" + m + meridiem;
+					}
+		        });
+	        </script>
+      </div>
+    </section>
   </body>
 </html>
